# orbis

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/orbis/: __init__.py  effects.py  exceptions.py  handlers.py  orbis_types.py  runtime.py
tests/: conftest.py  test_basic_execution.py  test_decorator_composition.py  test_effect_validation.py  test_effectful_handlers.py  test_exception_handling.py  test_log_propagation.py  test_marco_polo.py  test_nested_execution.py  test_peach.py  test_pipe.py  test_tap.py  test_traffic_light.py  test_vending_machine.py  test_yield_from_composition.py
