[project]
name = "orbis"
version = "0.1.0"
description = "Python-based algebraic effects library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff.lint]
select = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
