[project]
name = "orbis"
version = "0.1.0"
description = "Python-based algebraic effects library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "vulture",
]

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "BLE", "SIM", "RUF"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
